tests/negative/typecheck/index_product.orng
// index_product.orng:7:7: error: not a constant integer
//     x.[f()]
//      ^
// 
fn main() -> Int {
    let x: (Int, Bool, Bool, Int) = (0, false, false, 0)
    x.[f()]
}

fn f() -> Int { 3 }